force-app/main/default/objects/Reembolso__c/Reembolso__c.object-meta.xml
<CustomObject>
    <label>Reembolso</label>
    <nameField>
        <displayFormat>R#{00000}</displayFormat>
        <label>Cod do Reembolso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reembolso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>