force-app/main/default/objects/Reembolso__c/fields/Classe_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Classe_do_Produto__c</fullName>
    <label>Classe do Produto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Parceiro__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>CARGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>