force-app/main/default/objects/Reembolso__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <formula>Nome_da_Conta__r.CNPJ__c</formula>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>