force-app/main/default/objects/Reembolso__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <formula>Nome_da_Conta__r.CPF__c</formula>
    <label>CPF</label>
    <type>Text</type>
</CustomField>