force-app/main/default/objects/Reembolso__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Nome_da_Conta__r.EMail__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>