force-app/main/default/objects/Reembolso__c/fields/Nome_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Conta__c</fullName>
    <inlineHelpText>Relacione a conta</inlineHelpText>
    <label>Nome da Conta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Parceiro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reembolso</relationshipLabel>
    <relationshipName>Reembolso_conta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>