force-app/main/default/objects/Reembolso__c/fields/Porcentagem__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem__c</fullName>
    <label>Porcentagem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>