force-app/main/default/objects/Reembolso__c/fields/Relativo_a_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Relativo_a_Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relativo a Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reembolso</relationshipLabel>
    <relationshipName>Reembolso_OPP</relationshipName>
    <type>Lookup</type>
</CustomField>