force-app/main/default/objects/Reembolso__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <formula>Nome_da_Conta__r.Phone</formula>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>