force-app/main/default/objects/Reembolso__c/fields/Tipo_de_Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Parceiro__c</fullName>
    <label>Tipo de Parceiro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OURO</fullName>
            </value>
            <value>
                <fullName>PRATA</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>TRANSIÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>