force-app/main/default/objects/Reembolso__c/fields/Valor_OPP__c.field-meta.xml
<CustomField>
    <fullName>Valor_OPP__c</fullName>
    <formula>Relativo_a_Oportunidade__r.Valor_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor OPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>